Added 3 recipe pages(bacon.html,guacamole.html and homemadechili.html with were added to  index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Homepage</h1>
+    <h1>Recipe</h1>
+    <ul>
+        <a href="recipes/guacamole.html">Guacamole Recipe</a>
+        <a href="recipes/bacon.html">Bacon-Wrapped Jalapeño Poppers Recipe</a>
+        <a href="recipes/homemadechili.html">Easy Homemade Chili Recipe</a>
+    </ul>
 </body>
 </html>
