added list command to the recipe links in index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Recipe</h1>
     <ul>
-        <a href="recipes/guacamole.html">Guacamole Recipe</a>
-        <a href="recipes/bacon.html">Bacon-Wrapped Jalapeño Poppers Recipe</a>
-        <a href="recipes/homemadechili.html">Easy Homemade Chili Recipe</a>
+        <li><a href="recipes/guacamole.html">Guacamole Recipe</a></li>
+        <li><a href="recipes/bacon.html">Bacon-Wrapped Jalapeño Poppers Recipe</a></li>
+        <li><a href="recipes/homemadechili.html">Easy Homemade Chili Recipe</a></li>
     </ul>
 </body>
 </html>
