--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Recipe</h1>
+    <h1>Recipes</h1>
+    <img src="./images/images.jpg" width="350" height="350" alt="meme">
+    <h2>Three easy to make recipes that you might wanna try!!!</h2>
     <ul>
         <li><a href="recipes/guacamole.html">Guacamole Recipe</a></li>
         <li><a href="recipes/bacon.html">Bacon-Wrapped Jalapeño Poppers Recipe</a></li>
