--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Recipes</h1>
-    <img src="./images/images.jpg" width="350" height="350" alt="meme">
+    <img src="images/images.jpg" width="350" height="350" alt="meme">
     <h2>Three easy to make recipes that you might wanna try!!!</h2>
     <ul>
         <li><a href="recipes/guacamole.html">Guacamole Recipe</a></li>
