Added a link back to the main recipes page to all the recipe page

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Guacamole</h1>
-    <img src="../images/guacamole.jpg" width="200" height="250">
+    <img src="../images/guacamole.jpg" width="200" height="250" alt="guacamole">
     <p>This guacamole recipe gets a tasty kick from cayenne and cilantro. You can serve it smooth or chunky depending on your tastes.</p>
     <p><strong>Prep time: 15min</strong></p>                <p><strong>Total time: 15min</strong></p>
     <p><strong>Servings: 4</strong></p>
@@ -41,6 +41,8 @@
     <p><strong>Step 2</strong></p>
     <p>Serve immediately, or cover and refrigerate for 1 hour for improved flavor.</p>
     <img src="../images/guacamole1.jpg" alt="guacamole">
+
+    <a href="../index.html">Back to Recipes</a>
 
 </body>
 </html>
