added back to index link for bacon.html guacamole.html and homemadechili.html

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -42,7 +42,7 @@
     <p>Serve immediately, or cover and refrigerate for 1 hour for improved flavor.</p>
     <img src="../images/guacamole1.jpg" alt="guacamole">
 
-    <a href="../index.html">Back to Recipes</a>
+    <p><a href="../index.html">Back to Recipes</a></p>
 
 </body>
 </html>
