--- a/recipes/bacon.html
+++ b/recipes/bacon.html
@@ -36,7 +36,7 @@
     <p>Bake in the preheated oven until bacon is crispy, 25 to 35 minutes.</p>
     <img src="../images/bacon1.jpeg" alt="bacon">
 
-    <a href="../index.html">Back to Recipes</a>
+    <p><a href="../index.html">Back to Recipes</a></p>
 
 </body>
 </html>
