--- a/recipes/homemadechili.html
+++ b/recipes/homemadechili.html
@@ -45,7 +45,7 @@
     <P>Bring to a boil, reduce heat to low, cover and let simmer for 15 minutes.</p>
     <img src="../images/chili1.jpeg" alt="chili">
 
-    <a href="../index.html">Back to Recipes</a>
+    <p><a href="../index.html">Back to Recipes</a></p>
 
 </body>
 </html>
